SERVER-59570 Update match index in sharded lookup view resolution